--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <section class="our-stories">
             <h2>Our Stories</h2>
             <div class="story-grid">
-              <div class="story-card">
+              <div class="story-card, item-1">
                 <img src="assets/story-1.png" alt="">
                 <div class="story-info">
                   <span class="story-date">November 15, 2019</span>
@@ -86,32 +86,34 @@
                     collaborative environment, providing the...</p>
                 </div>
               </div>
-              <div class="story-card">
-                <img src="assets/story-2.png" alt="">
-                <div class="story-info">
-                  <span class="story-date">November 19, 2019</span>
-                  <h3>Find out if a school fits the family's needs</h3>
+              <div class="colum">
+                <div class="story-card, item-2">
+                  <img src="assets/story-2.png" alt="">
+                  <div class="story-info">
+                    <span class="story-date">November 19, 2019</span>
+                    <h3>Find out if a school fits the family's needs</h3>
+                  </div>
                 </div>
-              </div>
-              <div class="story-card">
-                <img src="assets/story-3.png" alt="">
-                <div class="story-info">
-                  <span class="story-date">November 10, 2019</span>
-                  <h3>Summer math & literacy centres for kids</h3>
+                <div class="story-card, item-3">
+                  <img src="assets/story-3.png" alt="">
+                  <div class="story-info">
+                    <span class="story-date">November 10, 2019</span>
+                    <h3>Summer math & literacy centres for kids</h3>
+                  </div>
                 </div>
-              </div>
-              <div class="story-card">
-                <img src="assets/story-4.png" alt="">
-                <div class="story-info">
-                  <span class="story-date">September 10, 2019</span>
-                  <h3>Classroom management techniques for new tutors</h3>
+                <div class="story-card, item-4">
+                  <img src="assets/story-4.png" alt="">
+                  <div class="story-info">
+                    <span class="story-date">September 10, 2019</span>
+                    <h3>Classroom management techniques for new tutors</h3>
+                  </div>
                 </div>
-              </div>
-              <div class="story-card">
-                <img src="assets/story-5.png" alt="">
-                <div class="story-info">
-                  <span class="story-date">July 19, 2019</span>
-                  <h3>Conversation rhymes improve kids listening</h3>
+                <div class="story-card, item-5">
+                  <img src="assets/story-5.png" alt="">
+                  <div class="story-info">
+                    <span class="story-date">July 19, 2019</span>
+                    <h3>Conversation rhymes improve kids listening</h3>
+                  </div>
                 </div>
               </div>
             </div>
